--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -38,9 +38,6 @@
 }
 
 @media screen and (max-width: $desktop-xl) {
-  .secondaryTiles {
-    border-top: 1px solid #ddd;
-  }
 
 
 }
